--- a/research.html
+++ b/research.html
@@ -96,6 +96,6 @@
     </div>
   </div>
 
-  <script src="/Nova-AI-Planer/research.js"></script>
+  <script type="module" src="/Nova-AI-Planer/research.js"></script>
 </body>
 </html>
