--- a/research.html
+++ b/research.html
@@ -96,6 +96,8 @@
     </div>
   </div>
 
-  <script type="module" src="/Nova-AI-Planer/research.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <script src="/Nova-AI-Planer/research.js"></script>
 </body>
 </html>
